removing iot-connect-image image and moving installs to layer conf file

--- a/meta-iotconnect/conf/layer.conf
+++ b/meta-iotconnect/conf/layer.conf
@@ -11,3 +11,16 @@ BBFILE_PRIORITY_meta-iotconnect = "6"
 
 LAYERDEPENDS_meta-iotconnect = "core"
 LAYERSERIES_COMPAT_meta-iotconnect = "hardknott"
+
+CORE_IMAGE_EXTRA_INSTALL += " kernel-modules"
+
+IMAGE_INSTALL += " ${CORE_IMAGE_EXTRA_INSTALL}"
+
+IMAGE_INSTALL += " curl"
+IMAGE_INSTALL += " packagegroup-core-boot"
+IMAGE_FEATURES += " splash"
+
+IMAGE_LINGUAS = " "
+
+
+
