--- a/meta-iotconnect/conf/layer.conf
+++ b/meta-iotconnect/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_PATTERN_meta-iotconnect = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-iotconnect = "6"
 
 LAYERDEPENDS_meta-iotconnect = "core"
-LAYERSERIES_COMPAT_meta-iotconnect = "hardknott"
+LAYERSERIES_COMPAT_meta-iotconnect = "kirkstone"
 
 CORE_IMAGE_EXTRA_INSTALL += " kernel-modules"
 
