port to dunfell

--- a/meta-myExampleIotconnectLayer/conf/layer.conf
+++ b/meta-myExampleIotconnectLayer/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-myExampleIotconnectLayer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-myExampleIotconnectLayer = "7"
 
 LAYERDEPENDS_myExampleIotconnectLayer = "core"
-LAYERSERIES_COMPAT_meta-myExampleIotconnectLayer = "hardknott"
+LAYERSERIES_COMPAT_meta-myExampleIotconnectLayer = "dunfell"
