--- a/meta-myExampleIotconnectLayer/recipes-apps/telemetry-demo/files/CMakeLists.txt
+++ b/meta-myExampleIotconnectLayer/recipes-apps/telemetry-demo/files/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 
-project(basic-sample)
+project(telemetry-demo)
 
 set(IOTC_USE_PAHO OFF CACHE BOOL "")
 set(IOTC_TPM_SUPPORT OFF CACHE BOOL "") # NOTE: IOTC_USE_PAHO needs to be set to OFF for this
@@ -10,6 +10,6 @@ add_subdirectory(${IOTC_C_SDK_DIR} SdkSources)
 include(GNUInstallDirs)
 
 include_directories(config PRIVATE ${IOTC_C_LIB_INCLUDE_DIR} ${IOTC_C_SDK_INCLUDE_DIR})
-add_executable(basic-sample-test main.c)
+add_executable(telemetry-demo main.c)
 
-target_link_libraries(basic-sample-test iotc-c-generic-sdk)
+target_link_libraries(telemetry-demo iotc-c-generic-sdk)
