--- a/meta-myExampleIotconnectLayer/recipes-apps/telemetry-demo/files/cmke-src/CMakeLists.txt
+++ b/meta-myExampleIotconnectLayer/recipes-apps/telemetry-demo/files/cmke-src/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required(VERSION 3.0.2)
 
 project(telemetry-demo)
 
+set(COMPONENTS_DIR components)
 set(IOTC_USE_PAHO OFF CACHE BOOL "")
 set(IOTC_TPM_SUPPORT OFF CACHE BOOL "") # NOTE: IOTC_USE_PAHO needs to be set to OFF for this
 #add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../iotc-generic-c-sdk SdkSources)
 add_subdirectory(${IOTC_C_SDK_DIR} SdkSources)
+
+add_subdirectory(components/json_parser)
+include_directories(${COMPONENTS_DIR}/json_parser/inc)
 
 include(GNUInstallDirs)
 
@@ -13,3 +17,4 @@ include_directories(config PRIVATE ${IOTC_C_LIB_INCLUDE_DIR} ${IOTC_C_SDK_INCLUD
 add_executable(telemetry-demo main.c)
 
 target_link_libraries(telemetry-demo iotc-c-generic-sdk)
+target_link_libraries(telemetry-demo json_parser)
