--- a/meta-myExampleIotconnectLayer/recipes-apps/telemetry-demo/files/eg-private-repo-data/config-symmtrcKy.json
+++ b/meta-myExampleIotconnectLayer/recipes-apps/telemetry-demo/files/eg-private-repo-data/config-symmtrcKy.json
@@ -1,38 +1,32 @@
 {
-    "duid": "blue",
-    "cpid": "av",
-    "env": "avn",
-    "iotc_server_cert": "/etc/ssl/certs/server.pem",
+    "duid": "your-duid",
+    "cpid": "your-cpid",
+    "env": "your-env",
+    "iotc_server_cert": "/etc/ssl/certs/DigiCert_Global_Root_G2.pem",
     "auth": {
         "auth_type": "IOTC_AT_SYMMETRIC_KEY",
         "params": {
-            "primary_key": "UN0TwIaNf4LOOQVt79t3rw=="
+            "primary_key": "your-symmkey=="
         }
     },
     "device": {
-        "offline_storage": {
-            "available_space_MB": 1,
-            "file_count": 1
-        },
         "name": "maaxboardt",
         "commands": [
             {
                 "name": "led",
-                "private_data": "/sys/class/leds/usr_led/brightness"
+                "private_data": "/path/to/file"
             }
         ],
         "attributes": [
             {
-                "name": "power",
-                "private_data": "/home/file1",
-                "data_type": "int",
-                "default_value": "-1"
+                "name": "sensor1",
+                "private_data": "/path/to/file",
+                "private_data_type": "binary"
             },
             {
-                "name": "nonononono",
-                "private_data": "/home/file2",
-                "data_type": "int",
-                "default_value": "-1"
+                "name": "sensor2",
+                "private_data": "/path/to/file",
+                "private_data_type": "ascii"
             }
         ]
     }
